Minor appearance changes

--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
 <div class="story" data-title="title">
-  <section class="todo"></section>
-  <section class="progress"></section>
-  <section class="done"></section>
+  <div class="status todo"></div>
+  <div class="status progress"></div>
+  <div class="status done"></div>
 </div>
